syntax = "proto3";

package move;
option go_package = "interface/grpc/proto/move";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service Service {
    rpc GetAll(FilterRequest) returns (ListMovesResponse);
    rpc Get(IdRequest) returns (MoveResponse);
    rpc Create(CreateRequest) returns (MoveResponse);
}

message Error {
    string code = 1;
    string message = 2;
}

// structure

message Move {
    string id = 1;
    string active = 2;
    string from_id = 3;
    string to_id = 4;
    google.protobuf.Timestamp date = 5;
    uint64 count = 6;
    google.protobuf.Any meta = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
}

// requests

message IdRequest {
    string client_id = 1;
    string move_id = 2;
}

message CreateRequest {
    string client_id = 1;
    string active_id = 2;
    string from_id = 3;
    string to_id = 4;
    google.protobuf.Timestamp date = 5;
    uint64 count = 6;
    google.protobuf.Any meta = 7;
}

message FilterRequest {
    bool            deleted = 1;
    string          active = 2;
    uint64          count_min = 3;
    uint64          count_max = 4;
    google.protobuf.Timestamp date_min = 5;
    google.protobuf.Timestamp date_max = 6;
    repeated string ids = 7;
    repeated string from_ids = 8;
    repeated string to_ids = 9;
}

// responses

message MoveResponse {
    Move move = 1;
    Error error = 2;
}

message ListMovesResponse {
    repeated Move moves = 1;
    Error error = 2;
}